--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "1.6.1",
     "react-dom": "17.0.2",
     "react-input-mask": "^2.0.4",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
